[DEL] 미사용 삭제